# TofuByte

./: .gitignore  README.md  TODO.md  pyproject.toml
tofu_byte/: __main__.py  command_line.py  config.py  main.py  mystatic.py  themes.py  type_register.py
tofu_byte/css/: debug.css  game_scene.css  main.css  menu_screens.css
tofu_byte/game/: display.py  events.py  game.py  input_manager.py  unix_input_manager.py
tofu_byte/maps/: debug_map.json
tofu_byte/maps/00_Tutorial/: 01_movement.json  02_stick_to_celling.json  03_jumping.json  04_celling_jumps.json
tofu_byte/maps/01_Cutlery_and_Dishes/: 05_plate.json  06_spoon.json  08_fork.json
tofu_byte/maps/01_Tofu_dot_init/: 01_poles.json
tofu_byte/maps/10_Hard/: 01_falling.json
tofu_byte/maps/99_In_progress/: 05_floors.json
tofu_byte/objects/: __init__.py  base_object.py  effect.py  faze.py  floating_text.py  floor.py  ideas.md  killing_boundary.py  light.py  map.py  shared_widgets.py  spikes.py  stars.py  state.py
tofu_byte/player/: __init__.py  collision.py  player.py
tofu_byte/resources/: TROUBLESHOOTING.md
tofu_byte/screens/: const.py  game_display.py  screens.py
tofu_byte/screens/menu/: about.py  end_screen.py  footer.py  map_loader.py  menu.py  pause.py  troubleshooting.py
tofu_byte/tools/: const.py  loggerr.py  map_utils.py  tools.py
